# clever-prover

./: .gitignore  README.md  main.ipynb  pyproject.toml  secret_template.json
src/clever_prover/main/: eval.py  eval_impl_generation.py  init_ray.py  vllm_utils.py
src/clever_prover/main/configs/: few_shot_impl_copra_proof_gpt5_mini.yaml  few_shot_impl_copra_proof_gpt_oss.yaml  few_shot_impl_few_shot_proof_gpt5_mini.yaml  few_shot_impl_few_shot_proof_gpt_oss_20b.yaml  few_shot_impl_few_shot_proof_kimina.yaml  few_shot_spec_copra_proof_gpt_oss.yaml  few_shot_spec_few_shot_proof_gpt_5_4_mini.yaml  few_shot_spec_few_shot_proof_gpt_5_4_mini_first10.yaml  few_shot_spec_few_shot_proof_gpt_5_4_mini_smoke.yaml  few_shot_spec_few_shot_proof_gpt_oss_20b.yaml  few_shot_spec_few_shot_proof_kimina.yaml  structured_spec_few_shot_proof.yaml  structured_spec_few_shot_proof_first10.yaml  structured_spec_few_shot_proof_smoke.yaml  structured_spec_few_shot_proof_smoke_240.yaml  structured_spec_proof_plan_few_shot_proof_first10.yaml  structured_spec_proof_plan_few_shot_proof_smoke.yaml
src/clever_prover/prompters/: simple_prompter.py
src/clever_prover/prompts/clever_prompts/system/: CopraInduction.md
src/clever_prover/prompts/structured_spec/examples/: StructuredSpecGeneration.md  StructuredSpecPlanner.md
src/clever_prover/solver/: iso_generator.py
src/clever_prover/solver/tools/: few_shot_impl_prover_tool.py  few_shot_iso_prover_tool.py  proof_planner_tool.py  spec_generator_tool.py  specification_planner_tool.py
(+4 files in other folders)
