[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clever_prover"]

[project]
name = "clever_prover"
version = "0.0.0"
authors = [
  { name="Amitayush Thakur", email="amitayush@utexas.edu" },
  { name="George Tsoukalas", email="george.tsoukalas@utexas.edu" }
]
description = "Proving correctness of generated code using LLMs in Lean 4"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "matplotlib==3.9.0",
    "dataclasses-json==0.5.7",
    "clever-bench>=1.0.0",
    "copra-theorem-prover>=1.1.17",
    "itp-interface==1.1.14",
    "numpy>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/trishullab/clever_prover"
Issues = "https://github.com/trishullab/clever_prover/issues"

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://download.pytorch.org/whl/cu121"